<resources>
    <string name="app_name">StoryApp</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>

    <string name="upload_camera">Upload Camera</string>
    <string name="upload_gallery">Upload Gallery</string>
    <string name="upload">Upload</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading . . .</string>

    <string name="logo_storyapp">Logo StoryApp</string>
    <string name="logo_back_storyapp">Logo Back StoryApp</string>
    <string name="logo_add_storyapp">Logo Add StoryApp</string>
    <string name="image_thumbnail_storyapp">Image Thumbnail StoryApp</string>

    <string name="menu_list_story">List Story</string>
    <string name="menu_map_story">Map Story</string>
    <string name="menu_account">Account</string>

    <string name="story_with_list">Story with List</string>
    <string name="story_with_map">Story with Map</string>

    <string name="name_account">Haidar Zamzam</string>
    <string name="title_account">Mobile Developer at Riliv</string>

    <string name="option_change_language">Change Language</string>
    <string name="option_app_information">App Information</string>
    <string name="option_logout">Logout</string>

    <string name="icon_change_language">Icon change language</string>
    <string name="icon_app_information">Icon app information</string>
    <string name="icon_logout">Icon logout</string>

    <string name="desc_logout">Are you sure you want to logout the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="toast_checking_user">Checking user. . .</string>
    <string name="toast_check_your_warning">Check your warning!</string>
    <string name="toast_creating_user">Creating user. . .</string>
    <string name="toast_register_successfully">Register successfully, please login!</string>
    <string name="toast_upload_story">"Upload story. . ."</string>
    <string name="toast_upload_story_successfully">Upload story successfully!</string>
    <string name="toast_please_fill_descrtiption">Please fill photo and description!</string>
</resources>