<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.account.AccountFragment">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/img_bg"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/logo_storyapp"
                    android:src="@drawable/img_logo" />

                <TextView
                    android:id="@+id/tv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/menu_account"
                    android:textColor="@color/white" />
            </LinearLayout>
        </Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="@dimen/margin_very_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/name_account"
            android:textColor="@color/color_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_very_small"
            android:fontFamily="@font/google_sans_regular"
            android:letterSpacing="0.05"
            android:text="@string/title_account"
            android:textColor="@color/black_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <LinearLayout
            android:id="@+id/ll_app_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_very_big"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_barrier" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_normal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_change_language"
                    android:src="@drawable/ic_baseline_language_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="7"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/option_change_language"
                    android:textColor="@color/black_hint"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_very_big"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_app_change_language">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_barrier" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_normal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_app_information"
                    android:src="@drawable/ic_baseline_info_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="7"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/option_app_information"
                    android:textColor="@color/black_hint"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_very_big"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_app_info">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_barrier" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_normal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_logout"
                    android:src="@drawable/ic_baseline_exit_to_app_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_weight="7"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/option_logout"
                    android:textColor="@color/black_hint"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_barrier" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>